src/scss/filters.scss
.filters {
  &--container {
    width: 25%;
    height: 50rem;
  }

  &--wrapper {
    height: 100%;
    margin: 3rem 2rem 0 0;
    background-color: white;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    border-radius: 2.5rem;
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    position: relative;

    .close-btn--wrapper {
      @media screen and (min-width: 1024px) {
        display: none;
      }
      position: absolute;
      top: 2rem;
      right: 10%;
      width: 2rem;
      height: 2rem;
    }
  }

  &__title--wrapper {
    display: flex;
    justify-content: center;
  }

  &__name {
    &--wrapper {
      display: flex;
      justify-content: center;
      margin: 3rem 0;
      flex-flow: row wrap;
      width: 80%;
    }

    &__title--wrapper {
      display: flex;
      justify-content: flex-start;
      width: 100%;
    }

    &__title {
      font-size: 1.4rem;
      margin: 0.6rem 0;
    }

    &__input--wrapper {
      width: 100%;
    }
  }

  &__type {
    &--wrapper {
      display: flex;
      justify-content: center;
      margin: 1rem 0;
      flex-flow: row wrap;
      width: 80%;
    }

    &__title--wrapper {
      display: flex;
      justify-content: flex-start;
      width: 100%;
    }

    &__title {
      font-size: 1.4rem;
      margin: 0.6rem 0;
    }

    &__select--wrapper {
      width: 100%;
    }
  }
}

.created-by--wrapper {
  position: absolute;
  bottom: 0;
  padding-bottom: 0.5rem;

  .created-by {
    font-size: 1.3rem;
    color: #666;
  }
}

.react-autosuggest__container {
  position: relative;
  width: 100%;
  display: flex;
}

.react-autosuggest__input {
  height: 30px;
  padding: 1rem 2rem 1rem 0;
  padding-left: 1rem;
  font-weight: 500;
  font-size: 16px;
  font-family: "Montserrat", sans-serif;
  border: 1px solid #aaa;
  border-radius: 4px;
  flex-grow: 1;
}

.react-autosuggest__input--focused {
  outline: none;
}

.react-autosuggest__input--open {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.react-autosuggest__suggestions-container {
  display: none;
}

.react-autosuggest__suggestions-container--open {
  display: block;
  position: absolute;
  top: 51px;
  width: 100%;
  border: 1px solid #aaa;
  background-color: #fff;
  font-weight: 300;
  font-size: 16px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  z-index: 2;
}

.react-autosuggest__suggestions-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.react-autosuggest__suggestion {
  cursor: pointer;
  padding: 10px 20px;
}

.react-autosuggest__suggestion--highlighted {
  background-color: #ddd;
}

